<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginLeft"
        app:cardElevation="@dimen/cardElevation"
        app:cardCornerRadius="@dimen/cornerRadius">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Steps: "
            android:textStyle="bold"
            android:padding="@dimen/paddingMin"
            android:id="@+id/id_ingredient_text_view"
            android:textColor="@color/colorAccent"/>
    </android.support.v7.widget.CardView>
    />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardElevation"
        app:cardCornerRadius="@dimen/cornerRadius"
        android:layout_margin="@dimen/marginLeft">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_steps_recycle"/>

    </android.support.v7.widget.CardView>
</LinearLayout>
