...
            android:padding="@dimen/paddingTop"
            app:cardCornerRadius="@dimen/cornerRadius"
            app:cardBackgroundColor="@color/colorBackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_ingredient_text"
                android:layout_marginLeft="@dimen/marginLeft"
                android:padding="@dimen/paddingMin"
                android:layout_marginStart="@dimen/marginLeft" />
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>
