...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="@dimen/marginLeft"
                        android:id="@+id/id_steps_detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/color_border"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
...
